--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+          <meta name="title" content="zentashi.tk">
+      <meta name="description" content="gufi site join now !!?1">
+      <meta name="theme-color" content="#4b4c51">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta charset="utf-8">
+
+      <meta property="og:type" content="website">
+      <meta property="og:url" content="https://zentashi.tk/">
+      <meta property="og:title" content="zentashi.tk">
+      <meta property="og:description" content="gufi site">
+      <meta property="og:image" content="https://i1.sndcdn.com/artworks-i0uvIStF0X49cfT2-y6EatQ-t500x500.jpg">
+
+      <meta property="twitter:card" content="summary_large_image">
+      <meta property="twitter:url" content="https://zentashi.tk/">
+      <meta property="twitter:title" content="zentashi.tk">
+      <meta property="twitter:description" content="funne site join now !!!!">
+      <meta property="twitter:image" content="https://i1.sndcdn.com/artworks-i0uvIStF0X49cfT2-y6EatQ-t500x500.jpg">
     <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
